--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@ DB_DATABASE=lancerdb
 DB_HOST=localhost
 DB_PORT=5432
 JWT_SECRET=your_jwt_secret_key
-
+ADMIN_EMAIL=lancermini1@gmail.com
+APP_PASSWORD=kpej onpv vrda pwgx
 
 
